--- a/spotify clone.html
+++ b/spotify clone.html
@@ -27,7 +27,7 @@
         <div class="library">
             <div class="options nav-option">
                 <div class="lib-option">
-                    <img src="library_icon.png">
+                    <img src="assets/img/library_icon.png">
                     <a href="#">Your Library</a>
                 </div>
                 <div class="icons">
@@ -67,7 +67,7 @@
             <h2>Recently Played</h2>
     <div class="cards-container">
           <div class="card">
-                  <img src="assets\img\backward_icon.png" class="card-img">
+                  <img src="assets/img/card1img.jpeg" class="card-img">
                   <p class="card-title">Top 50 - Global</p>
                   <p class="card-info">Your daily updates of most played tracks...</p>
          </div>
@@ -129,11 +129,11 @@
     <div class="album"></div>
     <div class="player">
         <div class="player-control">
-            <img src="player_icon1.png" class="player-control-icon">
-            <img src="player_icon2.png" class="player-control-icon">
-            <img src="player_icon3.png" class="player-control-icon" style="opacity:1; height: 2rem;">
-            <img src="player_icon4.png" class="player-control-icon">
-            <img src="player_icon5.png" class="player-control-icon">
+            <img src="assets/img/player_icon1.png" class="player-control-icon">
+            <img src="assets/img/player_icon2.png" class="player-control-icon">
+            <img src="assets/img/player_icon3.png" class="player-control-icon" style="opacity:1; height: 2rem;">
+            <img src="assets/img/player_icon4.png" class="player-control-icon">
+            <img src="assets/img/player_icon5.png" class="player-control-icon">
             
         </div>
         <div class="playback-bar">
